feat: Implementado tudão na main e finalizada a primeira etapa
